post & node favs

--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -72,21 +72,21 @@ $if session.user_id:
 	        <tbody><tr>
 	            <td width="33%" align="center">
 	            	<a href="http://www.v2ex.com/my/nodes" class="dark" style="display: block;">
-	            		<span class="bigger">9</span>
+	            		<span class="bigger">$session.node_favs</span>
 	            		<div class="sep3"></div>
 	            		<span class="fade">节点收藏</span>
 	            	</a>
 	            </td>
 	            <td width="34%" style="border-left: 1px solid rgba(100, 100, 100, 0.4); border-right: 1px solid rgba(100, 100, 100, 0.4);" align="center">
 	            	<a href="http://www.v2ex.com/my/topics" class="dark" style="display: block;">
-	            		<span class="bigger">9</span>
+	            		<span class="bigger">$session.post_favs</span>
 	            		<div class="sep3"></div>
 	            		<span class="fade">主题收藏</span>
 	            	</a>
 	            </td>
 	            <td width="33%" align="center">
 	            	<a href="http://www.v2ex.com/my/following" class="dark" style="display: block;">
-	            		<span class="bigger">2</span>
+	            		<span class="bigger">$session.user_favs</span>
 	            		<div class="sep3"></div>
 	            		<span class="fade">特别关注</span>
 	            	</a>
