--- a/tpl/profile.html
+++ b/tpl/profile.html
@@ -1,34 +1,50 @@
 $def with (title, user, posts, comments)
 $var title: $title
 <div id="Main">
-<div class="sep20"></div>         
+<div class="sep20">
+</div>         
 <div class="box">
     <div class="inner">
         <table cellpadding="0" cellspacing="0" border="0" width="100%">
             <tbody><tr>
-                <td width="73" valign="top" align="center"><img src="http://cdn.v2ex.com/avatar/f43b/4217/23312_large.png?m=1341908734" class="avatar" border="0" align="default" auto=""><div class="sep10"></div><strong class="online">ONLINE</strong></td>
-                <td width="10"></td>
+                <td width="73" valign="top" align="center"><img src="http://cdn.v2ex.com/avatar/f43b/4217/23312_large.png?m=1341908734" class="avatar" border="0">
+                	<div class="sep10">
+                	</div><strong class="online">ONLINE</strong></td>
+                <td width="10">
+                </td>
                 <td width="auto" valign="top" align="left">
                     <div class="fr">
                     </div>
                     <h1 style="margin-bottom: 5px;">$user.name</h1>
                     <span class="bigger gray">$user.signature</span>
-                    <div class="sep5"></div>
+                    <div class="sep5">
+                    </div>
                     <span class="fade">$site_title 第 $user.id 号会员，加入于 $helper.stamp2during(user.regist_time)</span>
                 </td>
             </tr>
         </tbody></table>
-        <div class="sep5"></div>
+        <div class="sep5">
+        </div>
     </div>
     <div class="inner">
-        <div class="sep5"></div>
-        <img src="/static/img/twitter.png" align="absmiddle">&nbsp;<a href="https://twitter.com/Rabbit_52" target="_blank">Rabbit_52</a><div class="sep5"></div>
-        <img src="/static/img/mobileme.png" align="absmiddle">&nbsp;<a href="http://rabbit52.com" target="_blank">rabbit52.com</a><div class="sep5"></div>
-        <img src="/static/img/location.png" align="absmiddle">&nbsp;<a href="http://www.google.com/maps?q=成都" target="_blank">成都</a><div class="sep5"></div>
-        <img src="/static/img/github.png" align="absmiddle">&nbsp;<a href="http://github.com/Rabbit52" target="_blank">Rabbit52</a><div class="sep5"></div>
+        <div class="sep5">
+        </div>
+        <img src="/static/img/twitter.png" align="absmiddle">&nbsp;<a href="https://twitter.com/Rabbit_52" target="_blank">Rabbit_52</a>
+        <div class="sep5">
+        </div>
+        <img src="/static/img/mobileme.png" align="absmiddle">&nbsp;<a href="http://rabbit52.com" target="_blank">rabbit52.com</a>
+        <div class="sep5">
+        </div>
+        <img src="/static/img/location.png" align="absmiddle">&nbsp;<a href="http://www.google.com/maps?q=成都" target="_blank">成都</a>
+        <div class="sep5">
+        </div>
+        <img src="/static/img/github.png" align="absmiddle">&nbsp;<a href="http://github.com/Rabbit52" target="_blank">Rabbit52</a>
+        <div class="sep5">
+        </div>
     </div>
 </div>
-<div class="sep20"></div>
+<div class="sep20">
+</div>
 <div class="box">
     <div class="cell"><span class="gray">$user.name 最近创建的主题</span></div>
 $if posts:
@@ -40,7 +56,8 @@ $if posts:
 		    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 		        <tbody><tr>
 		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
-		            <div class="sep5"></div>
+		            <div class="sep5">
+		            </div>
 		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="/profile/$user.name">$user.name</a></strong> &nbsp;•&nbsp; $helper.stamp2during(post.time) &nbsp;•&nbsp; 最后回复来自 <strong><a href="/profile/$comment_user.name">$comment_user.name</a></strong></span>
 		            </td>
 		            <td width="50" align="right" valign="middle">
@@ -52,7 +69,8 @@ $if posts:
 <div class="inner"><span class="chevron">»</span> <a href="/topics">$user.name 创建的更多主题</a></div>
     
 </div>
-<div class="sep20"></div>
+<div class="sep20">
+</div>
 <div class="box">
     <div class="cell"><span class="gray">$user.name 最近回复了</span></div>
 $if comments:
@@ -69,7 +87,7 @@ $if comments:
 	    <div class="dock_area">
 	        <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	            <tbody><tr>
-	                <td style="padding: 10px 15px 8px 15px; font-size: 12px; text-align: left;"><div class="fr"><span class="fade">$helper.stamp2during(comment_cur.time)</span></div><span class="gray">回复了 $post_user.name 创建的主题 <span class="chevron">›</span> <a href="/post/$post.id">$post.title</a></span></td> 
+	                <td style="padding: 10px 15px 8px 15px; font-size: 12px; text-align: left;"><div class="fr"><span class="fade">$helper.stamp2during(comment_cur.time)</span></div><span class="gray">回复了 $post_user.name 创建的主题 <span class="chevron">›</span> <a href="/post/$post.id#reply-$comment_cur.id">$post.title</a></span></td> 
 	            </tr>
 	            <tr>
 	                <td align="left"><img src="/static/img/arrow.png" style="margin-left: 20px;"></td>
