--- a/tpl/profile.html
+++ b/tpl/profile.html
@@ -7,7 +7,7 @@ $var title: $title
     <div class="inner">
         <table cellpadding="0" cellspacing="0" border="0" width="100%">
             <tbody><tr>
-                <td width="73" valign="top" align="center"><img src="http://cdn.v2ex.com/avatar/f43b/4217/23312_large.png?m=1341908734" class="avatar" border="0">
+                <td width="73" valign="top" align="center"><img src="$helper.avatar_url(user.avatar, 'big')" class="avatar" border="0">
                 	<div class="sep10">
                 	</div><strong class="online">ONLINE</strong></td>
                 <td width="10">
