--- a/tpl/post_favs.html
+++ b/tpl/post_favs.html
@@ -1,7 +1,8 @@
 $def with(title, user, posts, crumb)
 $var title:$title
 <div id="Main">
-<div class="sep20"></div>
+<div class="sep20">
+</div>
 <div class="box">
     <div class="header">
     	$:crumb
@@ -41,9 +42,11 @@ $if posts is not None:
     <div class="inner">
         <table cellpadding="0" cellspacing="0" border="0" width="100%">
             <tbody><tr>
-                <td width="120" align="left"></td>
+                <td width="120" align="left">
+                </td>
                 <td width="auto" align="center"><strong class="fade">1/1</strong></td>
-                <td width="120" align="right"></td>
+                <td width="120" align="right">
+                </td>
             </tr>
         </tbody></table>
     </div>
