--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -91,7 +91,7 @@ $if session.user_id:
 	            	</a>
 	            </td>
 	            <td width="34%" style="border-left: 1px solid rgba(100, 100, 100, 0.4); border-right: 1px solid rgba(100, 100, 100, 0.4);" align="center">
-	            	<a href="http://www.v2ex.com/my/topics" class="dark" style="display: block;">
+	            	<a href="/user/posts" class="dark" style="display: block;">
 	            		<span class="bigger">$session.post_favs</span>
 	            		<div class="sep3">
 	            		</div>
