posts from node favs

--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -83,7 +83,7 @@ $if session.user_id:
 	    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	        <tbody><tr>
 	            <td width="33%" align="center">
-	            	<a href="http://www.v2ex.com/my/nodes" class="dark" style="display: block;">
+	            	<a href="/user/nodes" class="dark" style="display: block;">
 	            		<span class="bigger">$session.node_favs</span>
 	            		<div class="sep3">
 	            		</div>
@@ -99,7 +99,7 @@ $if session.user_id:
 	            	</a>
 	            </td>
 	            <td width="33%" align="center">
-	            	<a href="http://www.v2ex.com/my/following" class="dark" style="display: block;">
+	            	<a href="/user/following" class="dark" style="display: block;">
 	            		<span class="bigger">$session.user_favs</span>
 	            		<div class="sep3">
 	            		</div>
