--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -5,7 +5,7 @@ $var title: $post.title
 	
 </div>
 <div class="box" style="border-bottom: 0px;">
-    <div class="header"><div class="fr"><a href="/member/liyangdal">
+    <div class="header"><div class="fr"><a href="/profile/$user.name">
     	<img src="$helper.avatar_url(user.avatar, 'big')" class="avatar">
     	</a>
     </div>
@@ -13,7 +13,7 @@ $var title: $post.title
     <div class="sep10">
     </div>
     <h1>$post.title</h1>
-    <small class="gray">By <a href="/member/liyangdal">$user.name</a> at $helper.stamp2during(post.time), $post.views 次点击 &nbsp; </small>
+    <small class="gray">By <a href="/profile/$user.name">$user.name</a> at $helper.stamp2during(post.time), $post.views 次点击 &nbsp; </small>
     </div>
     <div class="cell">
         <div class="topic_content">
@@ -57,7 +57,7 @@ $if post.comments > 0:
 		            	<img src="/static/img/reply.png" align="absmiddle" border="0" alt="Reply"></a> &nbsp;&nbsp; <span class="no">$comment_num</span></div>
 		                <div class="sep3">
 		                </div>
-		                <strong><a href="/member/chouj" class="dark">$comment_user.name</a></strong>&nbsp; &nbsp;<span class="fade small">$helper.stamp2during(comment.time)</span> 
+		                <strong><a href="/profile/$comment_user.name" class="dark">$comment_user.name</a></strong>&nbsp; &nbsp;<span class="fade small">$helper.stamp2during(comment.time)</span> 
 		                <div class="sep5">
 		                </div>
 		                <div class="reply_content">
