--- a/tpl/list.html
+++ b/tpl/list.html
@@ -36,9 +36,11 @@ $for post_cur in posts:
 	        	<tr>
 		            <td width="48" valign="top" align="center"><a href="/profile/$user.name">
 		            	<img src="$helper.avatar_url(user.avatar)" class="avatar" border="0" align="default" auto=""></a></td>
-		            <td width="10"></td>
+		            <td width="10">
+		            </td>
 		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
-		            <div class="sep5"></div>
+		            <div class="sep5">
+		            </div>
 		            <span class="small fade"><strong><a href="/profile/$user.name">$user.name</a></strong> &nbsp;•&nbsp; $helper.stamp2during(post.time)
 		            $if comment_user is not None:
 						 &nbsp;•&nbsp; 最后回复来自 <strong><a href="/profile/$user.name">$comment_user.name</a></strong>
