--- a/tpl/index.html
+++ b/tpl/index.html
@@ -12,7 +12,7 @@ $for post_cur in posts:
 	$ user = post_cur['user']
 	$ node = post_cur['node']
 	$ comment_user = post_cur['comment_user']
-	<div class="cell item" style="border-top-left-radius: 3px; border-top-right-radius: 3px;">
+	<div class="cell item">
 	    <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	        <tbody>
 		        <tr>
