--- a/tpl/user_comments.html
+++ b/tpl/user_comments.html
@@ -1,4 +1,4 @@
-$def with (title, comments, total, crumb)
+$def with (title, comments, total, crumb, pagination)
 $var title:$title
 <div id="Main">
 <div class="sep20">
@@ -18,7 +18,7 @@ $if comments:
 			$ class_t = 'cell'
 		$ comment_cur = comment['comment']
 		$ post = comment['post']
-		$ post_user = comment['post_user'] 
+		$ post_user = comment['post_user']
 	    <div class="dock_area">
 	        <table cellpadding="0" cellspacing="0" border="0" width="100%">
 	            <tbody><tr>
@@ -33,13 +33,7 @@ $if comments:
 	        <div class="reply_content">$comment_cur.content</div>
 	    </div>
     <div class="inner">
-        <table cellpadding="0" cellspacing="0" border="0" width="100%">
-            <tbody><tr>
-                <td width="120" align="left"></td>
-                <td width="auto" align="center"><strong class="fade">1/6</strong></td>
-                <td width="120" align="right"><input type="button" onclick="location.href = '/member/Rabbit52/replies?p=2';" value="下一页 ›" class="super normal button"></td>
-            </tr>
-        </tbody></table>
+        $:pagination
     </div>
 </div>
 </div>
