--- a/tpl/node_favs.html
+++ b/tpl/node_favs.html
@@ -1,4 +1,4 @@
-$def with (title, posts, total_rows, crumb)
+$def with (title, posts, total_rows, crumb, pagination)
 $var title:$title
 <div id="Main">
 <div class="sep20">
@@ -43,14 +43,11 @@ $if posts:
 		</tbody></table>
 		</div>
 	<div class="inner">
-	    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-	        <tbody><tr>
-	            <td width="120" align="left">
-	            </td>
-	            <td width="auto" align="center"><strong class="fade">1/395</strong></td>
-	            <td width="120" align="right"><input type="button" onclick="location.href = '/my/nodes?p=2';" value="下一页 ›" class="super normal button"></td>
-	        </tr>
-	    </tbody></table>
+	    $:pagination
+	</div>
+$else:
+	<div class="cell item">
+		暂时还莫有~
 	</div>
 </div>
 </div>
