--- a/tpl/profile.html
+++ b/tpl/profile.html
@@ -48,21 +48,33 @@ $var title: $title
 $if posts:
 	$for post_cur in posts:
 		$ post = post_cur['post']
-		$ node = post_cur['node']
 		$ comment_user = post_cur['comment_user']
-		<div class="cell item" style="border-top-left-radius: 3px; border-top-right-radius: 3px;">
+		$ node = post_cur['node']
+		<div class="cell item">
 		    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-		        <tbody><tr>
-		            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
-		            <div class="sep5">
-		            </div>
-		            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="/profile/$user.name">$user.name</a></strong> &nbsp;•&nbsp; $helper.stamp2during(post.time) &nbsp;•&nbsp; 最后回复来自 <strong><a href="/profile/$comment_user.name">$comment_user.name</a></strong></span>
-		            </td>
-		            <td width="50" align="right" valign="middle">
-		                <a href="/post/$post.id" class="count_livid">$post.comments</a>
-		            </td>
-		        </tr>
-		    </tbody></table>
+		        <tbody>
+			        <tr>
+			            <td width="48" valign="top" align="center"><a href="/profile/$user.name">
+				            	<img src="$helper.avatar_url(user.avatar)" class="avatar">
+				            </a>
+			            </td>
+			            <td width="10">
+			            </td>
+			            <td width="auto" valign="middle"><span class="item_title"><a href="/post/$post.id">$post.title</a></span>
+			            <div class="sep5">
+			            </div>
+			            <span class="small fade"><a class="node" href="/node/$node.name">$node.display_name</a> &nbsp;•&nbsp; <strong><a href="/profile/$user.name">$user.name</a></strong>&nbsp;•&nbsp; $helper.stamp2during(post.time)
+						$if comment_user is not None:
+							 &nbsp;•&nbsp; 最后回复来自 <strong><a href="/profile/$user.name">$comment_user.name</a></strong>
+						</span>
+			            </td>
+			            <td width="50" align="right" valign="middle">
+			                $if post.comments > 0:
+			                	<a href="/post/$post.id" class="count_livid">$post.comments</a>
+			            </td>
+			        </tr>
+			    </tbody>
+		    </table>
 		</div>
 <div class="inner"><span class="chevron">»</span> <a href="/profile/$user.name/posts">$user.name 创建的更多主题</a></div>
     
