--- a/tpl/user_posts.html
+++ b/tpl/user_posts.html
@@ -1,4 +1,4 @@
-$def with (title, user, posts, total_rows, crumb)
+$def with (title, user, posts, total_rows, crumb, pagination)
 $var title:$title
 <div id="Main">
 <div class="sep20">
@@ -39,15 +39,11 @@ $if posts:
 		    </table>
 		</div>
     <div class="inner">
-        <table cellpadding="0" cellspacing="0" border="0" width="100%">
-            <tbody><tr>
-                <td width="120" align="left">
-                </td>
-                <td width="auto" align="center"><strong class="fade">1/1</strong></td>
-                <td width="120" align="right">
-                </td>
-            </tr>
-        </tbody></table>
+        $:pagination
     </div>
+$else:
+	<div class="cell item">
+		暂时还莫有~
+	</div>
 </div>
 </div>
