--- a/tpl/no_money.html
+++ b/tpl/no_money.html
@@ -1,11 +1,11 @@
-$def with (title, crumb)
+$def with (title, message, crumb)
 $var title: $title
 <div id="Main">
 <div class="sep20">
 </div>
 <div class="box">
 	<div class="header">$:crumb</div>
-		<div class="cell"><span class="gray bigger">Topic Not Found</span></div>
+		<div class="cell"><span class="gray bigger">$message</span></div>
 		<div class="inner">← <a href="/">返回首页</a></div>
 	</div>
 </div>
