thanks with ajax

--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -9,7 +9,8 @@ $else:
 		<link rel="icon" type="image/png" href="/static/img/favicon.ico">
 		<link rel="stylesheet" href="/static/css/shared.css" />
 		<link rel="stylesheet" href="/static/css/main.css" />
-		<script type="texxt/javascript" src="/static/js/jquery.js"></script>
+		<script type="text/javascript" src="/static/js/jquery.js"></script>
+		<script type="text/javascript" src="/static/js/main.js"></script>
 		<title>$title</title>
 	</head>
 	<body>
