--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -52,7 +52,7 @@ $if post.comments > 0:
 		            <td width="48" valign="top" align="center"><img src="$helper.avatar_url(comment_user.avatar)" class="avatar" border="0"></td>
 		            <td width="10" valign="top">
 		            </td>
-		            <td width="auto" valign="top" align="left"><div class="fr"><div id="thank_area_422216" class="thank_area"><a href="#;" onclick="thankReply(422216, 1341908520);" class="thank">感谢回复者</a>
+		            <td width="auto" valign="top" align="left"><div class="fr"><div id="thank_area_422216" class="thank_area"><a href="#;" onclick="thankReply($comment.id);" class="thank">感谢回复者</a>
 		            </div> &nbsp; <a href="#;" onclick="replyOne('chouj');">
 		            	<img src="/static/img/reply.png" align="absmiddle" border="0" alt="Reply"></a> &nbsp;&nbsp; <span class="no">$comment_num</span></div>
 		                <div class="sep3">
