--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -1,4 +1,4 @@
-$def with (post, user, comments, form, post_fav, favs, crumb)
+$def with (post, user, comments, form, post_fav, favs, thanks, crumb)
 $var title: $post.title
 <div id="Main">
 <div class="sep20">
@@ -24,7 +24,9 @@ $if session.user_id:
 	<div class="topic_buttons">
 		<div class="fr gray f11" style="line-height: 12px; padding-top: 3px; text-shadow: 0px 1px 0px #fff;">$post.views 次点击 &nbsp;
 		$if favs>0:
-			∙ &nbsp; $favs 人收藏 
+			∙ &nbsp; $favs 人收藏
+		$if post.thanks > 0:
+			∙ &nbsp; $post.thanks 人感谢
 		</div>
 	    $if post_fav:
 	    	<a href="/post/unfav/$post.id" class="tb">取消收藏</a>
@@ -32,6 +34,12 @@ $if session.user_id:
 	    	<a href="/post/fav/$post.id" class="tb">加入收藏</a>
 	    <a href="###" onclick="window.open('https://twitter.com/share?url=$site_url/post/$post.id&amp;related=v2ex&amp;hashtags=$site_title&amp;text=$post.title', '_blank', 'width=550,height=370'); recordOutboundLink(this, 'Share', 'twitter.com');" class="tb">Tweet</a> &nbsp;
 	    <a href="###" onclick="window.open('http://service.weibo.com/share/share.php?url=$site_url/post/$post.id&amp;title=$post.title#site_title#', '_blank', 'width=550,height=370'); recordOutboundLink(this, 'Share', 'weibo.com');" class="tb">Weibo</a> &nbsp;
+	    <div id="topic_thank">
+	    $if thanks:
+	    	<span class="f11 gray" style="text-shadow: 0px 1px 0px #fff;">感谢已发送</span>
+	    $else:
+	    	<a href="###" onclick="if (confirm('你确定要向本主题创建者发送谢意？')) { thankTopic($post.id); }" class="tb">感谢</a>
+	    </div>
 	</div>
 </div>
 <div class="sep20">
