--- a/tpl/post_view.html
+++ b/tpl/post_view.html
@@ -60,12 +60,21 @@ $if post.comments > 0:
 		            <td width="48" valign="top" align="center"><img src="$helper.avatar_url(comment_user.avatar)" class="avatar" border="0"></td>
 		            <td width="10" valign="top">
 		            </td>
-		            <td width="auto" valign="top" align="left"><div class="fr"><div id="thank_area_422216" class="thank_area"><a href="#;" onclick="thankReply($comment.id);" class="thank">感谢回复者</a>
-		            </div> &nbsp; <a href="#;" onclick="replyOne('chouj');">
+		            <td width="auto" valign="top" align="left"><div class="fr">
+		            	$if comment_cur['thanks']:
+		            		<div id="thank_area_$comment.id" class="thank_area thanked">感谢已发送</div>
+		            	$else:
+		            		<div id="thank_area_$comment.id" class="thank_area">
+		            			<a href="###" onclick="thankReply($comment.id);" class="thank">感谢回复者</a>
+		            		</div>
+		            &nbsp; <a href="#;" onclick="replyOne('chouj');">
 		            	<img src="/static/img/reply.png" align="absmiddle" border="0" alt="Reply"></a> &nbsp;&nbsp; <span class="no">$comment_num</span></div>
 		                <div class="sep3">
 		                </div>
-		                <strong><a href="/profile/$comment_user.name" class="dark">$comment_user.name</a></strong>&nbsp; &nbsp;<span class="fade small">$helper.stamp2during(comment.time)</span> 
+		                <strong><a href="/profile/$comment_user.name" class="dark">$comment_user.name</a></strong>&nbsp; &nbsp;
+		                <span class="fade small">$helper.stamp2during(comment.time)</span>
+		                $if comment.thanks > 0:
+		                	<span class="small fade">♥ $comment.thanks</span>
 		                <div class="sep5">
 		                </div>
 		                <div class="reply_content">
