--- a/tpl/layout.html
+++ b/tpl/layout.html
@@ -1,4 +1,4 @@
-$def with (content, title = 'test')
+$def with (content, title = 'Post_bar')
 $if content.title is not None:
 	$ title = content.title + ' | ' + site_title
 $else:
